[package]
name = "asdf"
version = "0.1.0"
edition = "2021"

[lib]
name = "asdf"

[[bin]]
name = "asdf"

[dependencies]
clap = { version = "4.3.3", features = ["cargo", "derive", "env"] }
dirs = "5.0.1"
git2 = "0.17.2"
mlua = { version = "0.8.9", features = ["luajit", "vendored"] }
wait-timeout = "0.2.0"
